--- a/HEATTemplates/templates/autoscaling_with_haproxy_full.yaml
+++ b/HEATTemplates/templates/autoscaling_with_haproxy_full.yaml
@@ -201,7 +201,7 @@ resources:
                 mkdir /var/log/heartbeat
                 cat >/etc/supervisor/conf.d/heartbeat.conf <<EOF
                 [program:heartbeat]
-                command=/home/heartbeat/venv/bin/gunicorn -b 127.0.0.1:8000 -w 4 --chdir /home/heartbeat --log-file - heartbeat:heartbeat
+                command=/home/heartbeat/venv/bin/gunicorn -b 127.0.0.1:8000 -w 4 --chdir /home/heartbeat --log-file - heartbeat:app
                 user=heartbeat
                 autostart=true
                 autorestart=true
