Added restart command for haproxy.

--- a/HEATTemplates/templates/autoscaling_with_haproxy_full.yaml
+++ b/HEATTemplates/templates/autoscaling_with_haproxy_full.yaml
@@ -185,7 +185,7 @@ resources:
                         stats uri /
                         stats hide-version" >>/etc/haproxy/haproxy.cfg
                 
-                service haproxy start
+                service haproxy restart
 
                 # create a heart beat user to run the server process
                 #adduser --disabled-password --gecos "" heartbeat
