--- a/HEATTemplates/templates/manual_scaling_full.yaml
+++ b/HEATTemplates/templates/manual_scaling_full.yaml
@@ -19,6 +19,10 @@ parameters:
   cluster_size:
     type: number
     description: Number of worker nodes
+  min_cluster_size:
+    type: number
+    description: Minimum number of worker nodes
+    default: 1
 resources:
   database_root_password:
     type: OS::Heat::RandomString
@@ -111,54 +115,70 @@ resources:
 #        get_resource: asg
 #      cooldown: 60
 #      scaling_adjustment: -1
-#  cpu_alarm_high:
-#    type: OS::Ceilometer::Alarm
-#    properties:
-#      description: Scale-up if the average CPU > 60% for 1 minute
-#      meter_name: cpu_util
-#      statistic: avg
-#      period: 60
-#      evaluation_periods: 1
-#      threshold: 60
-#      alarm_actions:
-#      - get_attr:
-#        - web_server_scaleup_policy
-#        - alarm_url
-#      matching_metadata:
-#        metadata.user_metadata.stack:
-#          get_param: OS::stack_id
-#      comparison_operator: gt
-#  cpu_alarm_low:
-#    type: OS::Ceilometer::Alarm
-#    properties:
-#      description: Scale-down if the average CPU < 10% for 10 minutes
-#      meter_name: cpu_util
-#      statistic: avg
-#      period: 600
-#      evaluation_periods: 1
-#      threshold: 10
-#      alarm_actions:
-#        str_replace: |
-#          template: http://132.206.206.136:5000/scale?project_id=$project_id&stack_name=$stack_name&stack_id=$stack_id&template_url=$template_url&parameters=$parameters&adjustment=-1
-#          params:
-#            $project_id: { get_param: OS::project_id }
-#            $stack_name: { get_param: OS::stack_name }
-#            $stack_id: { get_param: OS::stack_id }
-#            $template_url: https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/manual_scaling_full.yaml
-#            $parameters:
-#              str_replace:
-#                template "{ "image":"$image", "key":"$key", "flavor":"$flavor", "database_flavor":"$database_flavor", "network":"$network", "cluster_size":"$cluster_size" }"
-#                params:
-#                  $image: {get_param: image }
-#                  $key: {get_param: key }
-#                  $flavor: {get_param: flavor }
-#                  $database_flavor: {get_param: database_flavor }
-#                  $network: {get_param: network }
-#                  $cluster_size: {get_param: cluster_size } 
-#      matching_metadata:
-#        metadata.user_metadata.stack:
-#          get_param: OS::stack_id
-#      comparison_operator: lt
+  cpu_alarm_high:
+    type: OS::Ceilometer::Alarm
+    properties:
+      description: Scale-up if the average CPU > 60% for 1 minute
+      meter_name: cpu_util
+      statistic: avg
+      period: 60
+      evaluation_periods: 1
+      threshold: 60
+      alarm_actions:
+        str_replace: |
+          template: http://142.150.208.240:5000/scale?project_id=$project_id&stack_name=$stack_name&stack_id=$stack_id&template_url=$template_url&parameters=$parameters&adjustment=1&min_cluster_size=$min_cluster_size
+          params:
+            $project_id: { get_param: OS::project_id }
+            $stack_name: { get_param: OS::stack_name }
+            $stack_id: { get_param: OS::stack_id }
+            $min_cluster_size: { get_param: min_cluster_size }
+            $template_url: https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/manual_scaling_full.yaml
+            $parameters:
+              str_replace:
+                template "{ "image":"$image", "key":"$key", "flavor":"$flavor", "database_flavor":"$database_flavor", "network":"$network", "cluster_size":"$cluster_size" }"
+                params:
+                  $image: {get_param: image }
+                  $key: {get_param: key }
+                  $flavor: {get_param: flavor }
+                  $database_flavor: {get_param: database_flavor }
+                  $network: {get_param: network }
+                  $cluster_size: {get_param: cluster_size }
+      matching_metadata:
+        metadata.user_metadata.stack:
+          get_param: OS::stack_id
+      comparison_operator: gt
+  cpu_alarm_low:
+    type: OS::Ceilometer::Alarm
+    properties:
+      description: Scale-down if the average CPU < 10% for 1 minute
+      meter_name: cpu_util
+      statistic: avg
+      period: 60
+      evaluation_periods: 1
+      threshold: 10
+      alarm_actions:
+        str_replace: |
+          template: http://142.150.208.240:5000/scale?project_id=$project_id&stack_name=$stack_name&stack_id=$stack_id&template_url=$template_url&parameters=$parameters&adjustment=-1&min_cluster_size=$min_cluster_size
+          params:
+            $project_id: { get_param: OS::project_id }
+            $stack_name: { get_param: OS::stack_name }
+            $stack_id: { get_param: OS::stack_id }
+            $min_cluster_size: { get_param: min_cluster_size }
+            $template_url: https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/manual_scaling_full.yaml
+            $parameters:
+              str_replace:
+                template "{ "image":"$image", "key":"$key", "flavor":"$flavor", "database_flavor":"$database_flavor", "network":"$network", "cluster_size":"$cluster_size" }"
+                params:
+                  $image: {get_param: image }
+                  $key: {get_param: key }
+                  $flavor: {get_param: flavor }
+                  $database_flavor: {get_param: database_flavor }
+                  $network: {get_param: network }
+                  $cluster_size: {get_param: cluster_size } 
+      matching_metadata:
+        metadata.user_metadata.stack:
+          get_param: OS::stack_id
+      comparison_operator: lt
   lb:
     type: OS::Nova::Server
     properties:
