--- a/HEATTemplates/templates/manual_scaling_full.yaml
+++ b/HEATTemplates/templates/manual_scaling_full.yaml
@@ -124,25 +124,25 @@ resources:
       period: 60
       evaluation_periods: 1
       threshold: 60
-      alarm_actions:
-        str_replace: |
-          template: http://142.150.208.240:5000/scale?project_id=$project_id&stack_name=$stack_name&stack_id=$stack_id&template_url=$template_url&parameters=$parameters&adjustment=1&min_cluster_size=$min_cluster_size
-          params:
-            $project_id: { get_param: OS::project_id }
-            $stack_name: { get_param: OS::stack_name }
-            $stack_id: { get_param: OS::stack_id }
-            $min_cluster_size: { get_param: min_cluster_size }
-            $template_url: https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/manual_scaling_full.yaml
-            $parameters:
-              str_replace:
-                template "{ "image":"$image", "key":"$key", "flavor":"$flavor", "database_flavor":"$database_flavor", "network":"$network", "cluster_size":"$cluster_size" }"
-                params:
-                  $image: {get_param: image }
-                  $key: {get_param: key }
-                  $flavor: {get_param: flavor }
-                  $database_flavor: {get_param: database_flavor }
-                  $network: {get_param: network }
-                  $cluster_size: {get_param: cluster_size }
+#      alarm_actions:
+#        str_replace: |
+#          template: http://142.150.208.240:5000/scale?project_id=$project_id&stack_name=$stack_name&stack_id=$stack_id&template_url=$template_url&parameters=$parameters&adjustment=1&min_cluster_size=$min_cluster_size
+#          params:
+#            $project_id: { get_param: OS::project_id }
+#            $stack_name: { get_param: OS::stack_name }
+#            $stack_id: { get_param: OS::stack_id }
+#            $min_cluster_size: { get_param: min_cluster_size }
+#            $template_url: https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/manual_scaling_full.yaml
+#            $parameters:
+#              str_replace:
+#                template "{ "image":"$image", "key":"$key", "flavor":"$flavor", "database_flavor":"$database_flavor", "network":"$network", "cluster_size":"$cluster_size" }"
+#                params:
+#                  $image: {get_param: image }
+#                  $key: {get_param: key }
+#                  $flavor: {get_param: flavor }
+#                  $database_flavor: {get_param: database_flavor }
+#                  $network: {get_param: network }
+#                  $cluster_size: {get_param: cluster_size }
       matching_metadata:
         metadata.user_metadata.stack:
           get_param: OS::stack_id
@@ -156,25 +156,25 @@ resources:
       period: 60
       evaluation_periods: 1
       threshold: 10
-      alarm_actions:
-        str_replace: |
-          template: http://142.150.208.240:5000/scale?project_id=$project_id&stack_name=$stack_name&stack_id=$stack_id&template_url=$template_url&parameters=$parameters&adjustment=-1&min_cluster_size=$min_cluster_size
-          params:
-            $project_id: { get_param: OS::project_id }
-            $stack_name: { get_param: OS::stack_name }
-            $stack_id: { get_param: OS::stack_id }
-            $min_cluster_size: { get_param: min_cluster_size }
-            $template_url: https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/manual_scaling_full.yaml
-            $parameters:
-              str_replace:
-                template "{ "image":"$image", "key":"$key", "flavor":"$flavor", "database_flavor":"$database_flavor", "network":"$network", "cluster_size":"$cluster_size" }"
-                params:
-                  $image: {get_param: image }
-                  $key: {get_param: key }
-                  $flavor: {get_param: flavor }
-                  $database_flavor: {get_param: database_flavor }
-                  $network: {get_param: network }
-                  $cluster_size: {get_param: cluster_size } 
+#      alarm_actions:
+#        str_replace: |
+#          template: http://142.150.208.240:5000/scale?project_id=$project_id&stack_name=$stack_name&stack_id=$stack_id&template_url=$template_url&parameters=$parameters&adjustment=-1&min_cluster_size=$min_cluster_size
+#          params:
+#            $project_id: { get_param: OS::project_id }
+#            $stack_name: { get_param: OS::stack_name }
+#            $stack_id: { get_param: OS::stack_id }
+#            $min_cluster_size: { get_param: min_cluster_size }
+#            $template_url: https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/manual_scaling_full.yaml
+#            $parameters:
+#              str_replace:
+#                template "{ "image":"$image", "key":"$key", "flavor":"$flavor", "database_flavor":"$database_flavor", "network":"$network", "cluster_size":"$cluster_size" }"
+#                params:
+#                  $image: {get_param: image }
+#                  $key: {get_param: key }
+#                  $flavor: {get_param: flavor }
+#                  $database_flavor: {get_param: database_flavor }
+#                  $network: {get_param: network }
+#                  $cluster_size: {get_param: cluster_size } 
       matching_metadata:
         metadata.user_metadata.stack:
           get_param: OS::stack_id
@@ -240,20 +240,50 @@ outputs:
   server_ips:
     description: The public IP address of the newly configured Server.
     value: { get_attr: [worker_group, attributes, networks, get_param: network, 0] }
-#  scale_up_url:
-#    description: |
-#      This URL is the webhook to scale up the autoscaling group.  You can invoke the scale-up operation by doing an HTTP POST to this URL; no body nor extra headers are needed.
-#    value:
-#      get_attr:
-#      - web_server_scaleup_policy
-#      - alarm_url
-#  scale_dn_url:
-#    description: |
-#      This URL is the webhook to scale down the autoscaling group. You can invoke the scale-down operation by doing an HTTP POST to this URL; no body nor extra headers are needed.
-#    value:
-#      get_attr:
-#      - web_server_scaledown_policy
-#      - alarm_url
+  scale_up_url:
+    description: |
+      This URL is the webhook to scale up the autoscaling group.  You can invoke the scale-up operation by doing an HTTP POST to this URL; no body nor extra headers are needed.
+    value:
+      str_replace: |
+          template: http://142.150.208.240:5000/scale?project_id=$project_id&stack_name=$stack_name&stack_id=$stack_id&template_url=$template_url&parameters=$parameters&adjustment=1&min_cluster_size=$min_cluster_size
+          params:
+            $project_id: { get_param: OS::project_id }
+            $stack_name: { get_param: OS::stack_name }
+            $stack_id: { get_param: OS::stack_id }
+            $min_cluster_size: { get_param: min_cluster_size }
+            $template_url: https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/manual_scaling_full.yaml
+            $parameters:
+              str_replace:
+                template "{ "image":"$image", "key":"$key", "flavor":"$flavor", "database_flavor":"$database_flavor", "network":"$network", "cluster_size":"$cluster_size" }"
+                params:
+                  $image: {get_param: image }
+                  $key: {get_param: key }
+                  $flavor: {get_param: flavor }
+                  $database_flavor: {get_param: database_flavor }
+                  $network: {get_param: network }
+                  $cluster_size: {get_param: cluster_size }
+  scale_dn_url:
+    description: |
+      This URL is the webhook to scale down the autoscaling group. You can invoke the scale-down operation by doing an HTTP POST to this URL; no body nor extra headers are needed.
+    value:
+      str_replace: |
+          template: http://142.150.208.240:5000/scale?project_id=$project_id&stack_name=$stack_name&stack_id=$stack_id&template_url=$template_url&parameters=$parameters&adjustment=-1&min_cluster_size=$min_cluster_size
+          params:
+            $project_id: { get_param: OS::project_id }
+            $stack_name: { get_param: OS::stack_name }
+            $stack_id: { get_param: OS::stack_id }
+            $min_cluster_size: { get_param: min_cluster_size }
+            $template_url: https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/manual_scaling_full.yaml
+            $parameters:
+              str_replace:
+                template "{ "image":"$image", "key":"$key", "flavor":"$flavor", "database_flavor":"$database_flavor", "network":"$network", "cluster_size":"$cluster_size" }"
+                params:
+                  $image: {get_param: image }
+                  $key: {get_param: key }
+                  $flavor: {get_param: flavor }
+                  $database_flavor: {get_param: database_flavor }
+                  $network: {get_param: network }
+                  $cluster_size: {get_param: cluster_size }
   website_url:
     value:
       str_replace:
