--- a/HEATTemplates/templates/external_scaling_policy.yaml
+++ b/HEATTemplates/templates/external_scaling_policy.yaml
@@ -35,32 +35,38 @@ parameters:
   adjustment:
     type: number
     description: Scaling coefficient (number of workers to be added or removed)
+  template_url:
+    type: string
+    description: URL for the stack template
 outputs:
-  scale_url:
-    str_replace:  
-      template: http://142.150.208.240:5000/scale?project_id=$project_id&stack_name=$stack_name&stack_id=$stack_id&min_cluster_size=$min_cluster_size&template_url=$template_url&parameters=$parameters&adjustment=-1
-      params:
-        $project_id: ca07deedf3864058a8e62797d1711733
-        $stack_name:
-          get_param: OS::stack_name
-        $stack_id: 
-          get_param: OS::stack_id
-        $min_cluster_size: 
-          get_param: min_cluster_size
-        $template_url: https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/manual_scaling_full.yaml
-        $parameters:
-          str_replace:
-            template: "{ 'image': '$image', 'key': '$key', 'flavor': '$flavor', 'database_flavor': '$database_flavor', 'network': '$network', 'cluster_size': '$cluster_size' }"
-            params:
-              $image: 
-                get_param: image
-              $key: 
-                get_param: key
-              $flavor: 
-                get_param: flavor
-              $database_flavor: 
-                get_param: database_flavor
-              $network: 
-                get_param: network
-              $cluster_size: 
-                get_param: cluster_size
+  value:
+    scale_url:
+      str_replace:  
+        template: http://142.150.208.240:5000/scale?project_id=$project_id&stack_name=$stack_name&stack_id=$stack_id&min_cluster_size=$min_cluster_size&template_url=$template_url&parameters=$parameters&adjustment=-1
+        params:
+          $project_id:
+            get_param: project_id
+          $stack_name:
+            get_param: OS::stack_name
+          $stack_id: 
+            get_param: OS::stack_id
+          $min_cluster_size: 
+            get_param: min_cluster_size
+          $template_url: 
+            get_param: template_url
+          $parameters:
+            str_replace:
+              template: "{ 'image': '$image', 'key': '$key', 'flavor': '$flavor', 'database_flavor': '$database_flavor', 'network': '$network', 'cluster_size': '$cluster_size' }"
+              params:
+                $image: 
+                  get_param: image
+                $key: 
+                  get_param: key
+                $flavor: 
+                  get_param: flavor
+                $database_flavor: 
+                  get_param: database_flavor
+                $network: 
+                  get_param: network
+                $cluster_size: 
+                  get_param: cluster_size
