--- a/HEATTemplates/templates/external_scaling_policy.yaml
+++ b/HEATTemplates/templates/external_scaling_policy.yaml
@@ -47,9 +47,9 @@ outputs:
           $project_id:
             get_param: project_id
           $stack_name:
-            get_param: OS::stack_name
+            get_param: stack_name
           $stack_id: 
-            get_param: OS::stack_id
+            get_param: stack_id
           $min_cluster_size: 
             get_param: min_cluster_size
           $template_url: 
