--- a/HEATTemplates/templates/external_scaling_policy.yaml
+++ b/HEATTemplates/templates/external_scaling_policy.yaml
@@ -42,7 +42,7 @@ outputs:
   scale_url:
     value:
       str_replace:  
-        template: http://142.150.208.240:5000/scale?project_id=$project_id&stack_name=$stack_name&stack_id=$stack_id&min_cluster_size=$min_cluster_size&template_url=$template_url&parameters=$parameters&adjustment=-1
+        template: http://142.150.208.240:5000/scale?project_id=$project_id&stack_name=$stack_name&stack_id=$stack_id&min_cluster_size=$min_cluster_size&template_url=$template_url&parameters=$parameters&adjustment=$adjustment
         params:
           $project_id:
             get_param: project_id
@@ -54,6 +54,8 @@ outputs:
             get_param: min_cluster_size
           $template_url: 
             get_param: template_url
+          $adjustment:
+            get_param: adjustment
           $parameters:
             str_replace:
               template: "{ 'image': '$image', 'key': '$key', 'flavor': '$flavor', 'database_flavor': '$database_flavor', 'network': '$network', 'cluster_size': '$cluster_size' }"
