Created and changed permissions to speardb log file.

--- a/HEATTemplates/templates/speardb.yaml
+++ b/HEATTemplates/templates/speardb.yaml
@@ -42,6 +42,9 @@ resources:
             
             dos2unix core_only.properties
             
+            touch /var/log/speardb.log
+            chmod 776 /var/log/speard.log
+            
             sed -i "/log4j.appender.default.file.file/c\log4j.appender.default.file.file = /var/log/speardb.log" core_only.properties
             
             java -jar SpearDB.jar core_only.properties
