--- a/HEATTemplates/templates/speardb.yaml
+++ b/HEATTemplates/templates/speardb.yaml
@@ -26,6 +26,7 @@ resources:
       metadata:
         metering.stack:
           get_param: OS::stack_id
+      user_data_format: RAW
       user_data:
         str_replace:
           template: |
